update hubot dependency  2.6.0
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/hubot/hubot.conf
+++ b/hubot/hubot.conf
@@ -1,9 +1,9 @@
 [program:hubot]
-command=/home/hubot/hubot-2.4.7/hubot/bin/hubot -a kandan
+command=/home/hubot/hubot-root/hubot/bin/hubot -a kandan
 autostart=true
 autorestart=false
 username=hubot
-directory=/home/hubot/hubot-2.4.7/hubot
+directory=/home/hubot/hubot-root/hubot
 environment=
  HUBOT_KANDAN_HOST=localhost,
  HUBOT_KANDAN_PORT=3000,
